# programming-data

./: .gitignore  README.md
Android/: AndroidKnowledgeReferences.md  README.md  Todo.md
Android/00-Code/: .gitignore
Android/01-Basic/: Activity.md  Application.md  Intent.md  IntentFlag.md  Notification.md  PendingIntent.md  RemoteViews.md  Service.md  四大组件角色概述.md  桌面Widget.md
Android/02-Fragment/: 02-Fragment使用.md  04-Fragment转场动画.md  07-FragmentDialog使用.md  08-FragmentDialog解析.md  11-在xml中使用Fragment.md  12-Fragment侧滑返回.md  Fragment相关问题记录.md  README.md
Android/03-Android-UI/: README.md
Android/05-NDK/: 01-NDK开发介绍.md  01-ndk简介.md  02-ndkbuild.md  03-cmake.md  04-ndk调试与崩溃分析.md  Android so库兼容性.md  Android-ndk开发实践.md  Android_C++高级编程.md  JNI笔记-1.md  JNI笔记-2.md  README.md  ndk开发实践.md
Android/06-Network/: Android网络请求.md  GraphQL.md  OkHttp01-References.md  OkHttp02-Analyse.md  OkHttp02-Interceptor.md  OkHttp03-AutoRetry.md  OkHttp04-Analyse.md  README.md  Retrofit-1Usage.md  Retrofit-2Analyse.md  Retrofit-3Extends.md
Android/07-OpenProject/: Arouter分析.md  Dagger2使用指南.md  Glide.md  GoogleAuto.md  LombokForAndroid.md  SqlDelight与SqlBrite简介.md  okio-wiki.md
Android/08-Architecture/: 01-开发准备.md  02-开发规范.md  03-认识架构.md  04-CleanArchitecture学习.md  04-架构实战.md  04-架构实践.md  05-组件化与模块化.md  07-Android-AOP编程.md  07-Android-AOP编程概述.md  08-Android全埋点解决方案笔记.md  10-列表设计与思考.md  11-Android跨进程通讯框架.md  12-使用gradle脚本将组件化进行到底.md  Jetpack-AAC-1.md  Jetpack-AAC-2.md  Jetpack-AndroidX.md  Jetpack-ComposeUI.md  Jetpack-Navigation.md  Jetpack-Room.md  Jetpack-Security.md  Jetpack-介绍.md  README.md  企业级架构设计课程笔记.md
Android/09-Optimization/: README.md
Android/09-Performance/: 01-《Android开发-从小工到专家》-性能优化.md  02-DataTransmission.md  06-Memory.md  09-Security-Dex加固.xmind  09-Security.md  AndroidStudio-Lint.md  AndroidStudio-MemoryAnalyse.md  README.md
Android/09-玩转Android性能分析与优化/: README.md
Android/10-HotFix&Plugin/: 01-插件化与热修复学习.md  02-接入BuglyTinker.md  Android-ClassLoader.md  Android-MultiDex.md  Apk安装过程.md  Apk打包过程.md  Dex相关概念.md
Android/11-MultiMedia/: Camera.md  Player.md  README.md
Android/12-System/: Android线程.md
Android/13-Interview/: 破解Android高级面试02-Java功底.md  破解Android高级面试03-熟悉并发编程.md  破解Android高级面试04-JNI编程的细节.md  破解Android高级面试05-Activity相关.md  破解Android高级面试06-Handler相关.md  破解Android高级面试11-课程总结.md
Android/13-Updating/: Android-Biometric.md  Android-Security.md  Android-System-Folder.md  File-Provider.md  I18N.md  Input-Mode.md  adb.md  《Android Heros》-Notes.md
Android/14-Interview/: 破解Android高级面试01-面试.md  破解Android高级面试07-内存优化相关.md  破解Android高级面试08-插件化和热修复.md  破解Android高级面试09-优化相关.md  破解Android高级面试10-拆解需求设计架构.md
Android/15-Advance/: 01-HTTP的原理和工作机制.md  README.md
Android/Code/: .gitignore
Android/Code/FFmpeg/DNFFmpegPlayer/app/: CMakeLists.txt  build.gradle
Android/Code/FFmpeg/DNFFmpegPlayer/app/src/main/: AndroidManifest.xml
Android/Code/FFmpeg/DNFFmpegPlayer/app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  BaseChannel.h  CMakeLists.txt  DNFFmpeg.cpp  DNFFmpeg.h  JavaCallHelper.h  VideoChannel.cpp  VideoChannel.h  native-lib.cpp  safe_queue.h
Android/Code/FFmpeg/DNFFmpegPlayer/app/src/main/java/com/dongnao/player/: DNPlayer.java  MainActivity.java  PlayActivity.java  Utils.java
Android/Code/FFmpeg/DNFFmpegPlayer/app/src/main/res/layout/: activity_main.xml
Android/Code/FFmpeg/FFmpegAndroid/app/: CMakeLists.txt  build.gradle
Android/Code/FFmpeg/FFmpegAndroid/app/src/main/: AndroidManifest.xml
Android/Code/FFmpeg/FFmpegAndroid/app/src/main/cpp/: decode.c  ffmpeg_info.c  player.c  push_stream.c  queue.c  queue.h  sync_render.c  sync_sound.c
Android/Code/FFmpeg/FFmpegAndroid/app/src/main/cpp/ffmpeglib2_8_8_include/libavutil/: ffversion.h
Android/Code/FFmpeg/FFmpegAndroid/app/src/main/cpp/ffmpeglib3_4/armeabi-v7a/pkgconfig/: libavcodec.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
Android/Code/FFmpeg/FFmpegAndroid/app/src/main/cpp/libyuv/include/libyuv/: rotate_argb.h  scale_argb.h
Android/Code/FFmpeg/FFmpegAndroid/app/src/main/java/com/ztiany/ffmpeg/android/: App.java  FFmpeg.java  MainActivity.java
Android/Code/FFmpeg/FFmpegAndroid/app/src/main/java/com/ztiany/ffmpeg/android/player/: AsyncPlayerActivity.java  SyncPlayerActivity.java  VideoView.java
Android/Code/FFmpeg/FFmpegAndroid/app/src/main/java/com/ztiany/ffmpeg/android/push/: PushActivity.java
Android/Code/FFmpeg/FFmpegAndroid/app/src/main/java/com/ztiany/ffmpeg/android/test/: DecodeToYUV420Activity.java  TestActivity.java
Android/Code/FFmpeg/FFmpegAndroid/app/src/main/res/layout/: activity_main.xml  activity_payler.xml
Android/Code/FFmpeg/FFmpegAndroid/app/src/test/java/com/ztiany/ffmpeg/android/: ExampleUnitTest.java
Android/Code/FFmpeg/FFmpegWindows-Clion/: CMakeLists.txt  README.md
Android/Code/FFmpeg/FFmpegWindows-Clion/libs/: avdevice.lib  avfilter.lib  avformat.lib
Android/Learning/: Android-Biometric.md  Input-Mode.md
Arch/: Concepts.md  DesignPattern-Observer.md  DesignPattern-Visitor.md  README.md  依赖倒置原则.md  单一职责原则.md  开闭原则.md  接口隔离原则.md  最少知识原则.md  里氏替换原则.md
Back-end/: README.md
Back-end/01-Basic/: 000-开发实践总结.md  002-XML.md  (+14 more)
C&CPP/: README.md
DSA/: README.md
Flutter/: Flutter02-UI.md  README.md
Front-end/: README.md
Gradle/: Android-TransformAPI.md  CI-Nexus仓库.md  GradleDoc-JavaPlugin.md  Gradle实战-08-Gradle依赖管理.md  README.md
Groovy/: Groovy01-介绍.md  Groovy学习资料.md
Java/: README.md  Todo.md
Kotlin/: Kotlin08-泛型.md  KotlinCoroutine01-Overview.md  KotlinCoroutine02-Summary.md  KotlinCoroutine03-Practice.md  KotlinCoroutine04-Reactive.md  KotlinCoroutine05-RxJava_to_Kotlin_coroutines.md  KotlinCoroutine07-Android.md  Kotlin系统入门与进阶(慕课网实战).md  README.md
Network/: README.md
OS/: README.md
Others/: Booklist.md  Git-Basic.md  IDEA-Plugins.md  Resume.md  Windows-Env.md  Windows-Recommended-Soft.md  Windows-Skills.md
Python/: 01-Python简介.md  02-基础语法.md  README.md
RxJava/: README.md
Tools/: Android-Tools.md  IDEA-Plugins.md  WIndows-Recommended-Soft.md  Windows-Env.md  Windows-Recommended-Soft.md  Windows-Skills.md
(+1857 files in other folders)
